# dev-agent-prompt-templates

./: CLAUDE.md  README_P.md.md  README_Seeker.md  ReadMe.md  package.json  pyproject.toml  requirements.txt
samples/: INITIAL-Defect-ReactApp.md  INITIAL-Feature-NodeAPI-PetStore.md  INITIAL-Feature-NodeAPI.md
src/story_scanner/: cli.py  context_builder.py  github_fetch.py  ranker.py  story_parser.py  suggester_openai.py
stories/: NEW_FEATURE.md
templates/Defect/: ApolloGraphQL.md  JavaMicroservice.md  NodeAPI.md  ReactApp.md  SpringBoot.md
templates/Enhancement/: ApolloGraphQL.md  JavaMicroservice.md  NodeAPI.md  ReactApp.md  SpringBoot.md
templates/Feature/: ApolloGraphQL.md  JavaMicroservice.md  NodeAPI.md  ReactApp.md  SpringBoot.md
templates/Incident/: ApolloGraphQL.md  JavaMicroservice.md  NodeAPI.md  ReactApp.md  SpringBoot.md
templates/Task/: ApolloGraphQL.md  JavaMicroservice.md  NodeAPI.md  ReactApp.md  SpringBoot.md
