[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-scanner"
version = "0.1.0"
description = "Scan GitHub repo based on a story; build a context bundle and (optionally) get OpenAI suggestions."
authors = [{name="You", email="you@example.com"}]
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
